--- a/signature_maschmeyer_ca.html
+++ b/signature_maschmeyer_ca.html
@@ -4,12 +4,11 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Sheldon W.B. Maschmeyer</title>
     <style type="text/css">
-      a {
-        color: #000000;
-        text-decoration: none;
+      .link-color:hover {
+        color: #5a5a5a !important
       }
-      a:hover {
-        color: #5a5a5a;
+      .link-color {
+        cursor: pointer;
       }
       body {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -40,19 +39,43 @@ src="data:image/jpeg;filename=profile.jpg;base64,/9j/4AAQSkZJRgABAQEBLAEsAAD/4Rb
           <table border="0" cellpadding="0" cellspacing="0">
             <tr>
               <td>Mobile:</td>
-              <td class="tableValue"><a href="tel:1-613-889-4320">1-613-889-4320</a></td>
+              <td class="tableValue">
+                <a href="tel:1-613-889-4320" style="color:#000000; text-decoration:none;">
+                  <span class="link-color">
+                    1-613-889-4320
+                  </span>
+                </a>
+              </td>
             </tr>
             <tr>
               <td>Email:</td>
-              <td class="tableValue"><a href="mailto:sheldon@maschmeyer.ca">sheldon@maschmeyer.ca</a></td>
+              <td class="tableValue">
+                <a href="mailto:sheldon@maschmeyer.ca" style="color:#000000; text-decoration:none;">
+                  <span class="link-color">
+                    sheldon@maschmeyer.ca
+                  </span>
+                </a>
+              </td>
             </tr>
             <tr>
               <td>Website:</td>
-              <td class="tableValue"><a href="https://maschmeyer.ca">https://maschmeyer.ca</a></td>
+              <td class="tableValue">
+                <a rel="noopener" target="_blank" href="https://maschmeyer.ca" style="color:#000000; text-decoration:none;">
+                  <span class="link-color">
+                    https://maschmeyer.ca
+                  </span>
+                </a>
+              </td>
             </tr>
             <tr>
               <td>LinkedIn:</td>
-              <td class="tableValue"><a href="https://www.linkedin.com/in/sheldonmaschmeyer">https://www.linkedin.com/in/sheldonmaschmeyer</a></td>
+              <td class="tableValue">
+                <a rel="noopener" target="_blank" href="https://www.linkedin.com/in/sheldonmaschmeyer" style="color:#000000; text-decoration:none;">
+                  <span class="link-color">
+                    https://www.linkedin.com/in/sheldonmaschmeyer
+                  </span>
+                </a>
+              </td>
             </tr>
           </table>
         </td>
